Major updates: Fix chassis/engine tracking, add LC & basic info fields, update branding to Modern Car Sale, and improve PDF exports
- Fixed issue where chassis and engine numbers were not transferred to inventory
- Added LC Information fields (amount, number, bank) to vehicle orders
- Added Basic Information fields (grade, BI number, custom fields) to orders
- Updated vehicle order view to display all new fields
- Fixed expense tracking bug (fuel was showing in clearance charge)
- Changed branding from 'Moder Car Sale' to 'Modern Car Sale' throughout app
- Added support for all report types in PDF exports (inventory, customers, financial, performance)
- Improved PDF export styling and layout
- Added company letterhead image (moderncar_sheet.jpg)
- Updated backend models to support new fields
- Rebuilt production build with all changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Advanced Car Sales Accounting System by NextWave Tech Labs" />
-  <title>Moder Car Sale - Accounting System</title>
+  <title>Modern Car Sale - Accounting System</title>
   <style>
     body {
       margin: 0;
